--- a/public/css/public.css
+++ b/public/css/public.css
@@ -1,233 +1,111 @@
-*{
-  padding: 0;
-  margin: 0;
+.margin_top88{
+    margin-top: 88px;
 }
-body{
-  font-family:"Times New Roman",Georgia,Serif;
-  padding: 0;
-  margin: 0;
-  overflow-x: hidden;
-
-}
-body,html{
- height: 100%;
-}
-#content{
- padding-top: 50px;
-}
-
-li{
-  list-style: none;
-}
-input{
-    font-size: 12px;
-}
-
-
-/*表格样式*/
-th img{
-  width: 23px;
-  height: 23px;
-  vertical-align: middle;
-}
-/*分页*/
-.table-tab{
-  width: 90%;
-  margin: 0 auto;
-  text-align: right;
-  padding: 0;
-}
-.table-tab span img{
-  width: 16px;
-  height:16px;
-  vertical-align: middle;
-}
-.table-tab span input{
-  width: 35px;
-  text-align: center;
-}
-.table-tab span input:first-child{
-  margin-right: 10px;
-}
-.table-tab span{
-  width: 16px;
-  font-size: 12px;
-  padding: 0 2px;
-  display: inline-block;
-  border: 1px solid #eee;
-  text-align: center;
-  height: 16px;
-  line-height: 16px;
-  cursor: pointer;
-}
-.table-tab span:last-child{
-  margin-right: 0;
-}
-.tabnumber{
-  display: inline-block;
-}
-.tabnumber span{
-  display: inline-block;
-  height: 16px;
-  line-height: 16px;
-  background: #E5E5E5;
-  border-radius: 4px;
-  vertical-align: bottom;
-}
-.tabnumber span:hover{
-  border: 1px solid #34495D;
-}
-.tabnumber span.om{
-  background: #000;
-  color: #fff;
-}
-.table-tab  .table-tab-span4{
-  width: 72px;
-}
-.table-tab  .table-tab-span5{
-  width: 90px;
-}
-.wrapBottom{
+.news{
     width: 100%;
-    height: 20px;
-    overflow: hidden;
-    background: #BE1801;
-    font-size: 12px;
-    color: #f4f4f4;
-    text-indent: 50px;
-    z-index: 9;
+    line-height: 50px;
+    border: 2px solid #ddd;
+    border-radius: 4px;
+    padding: 15px;
+
+}
+.news:hover{
+    border: 2px solid #999;
+}
+.show-grid{
+    margin-bottom: 15px;
+}
+.button_wrap{
+    padding: 3px;
+    border: 2px solid #ddd;
+    border-radius: 4px;
+}
+.button_wrap:hover{
+    border: 2px solid #999;
+}
+
+/*弹出层*/
+.alert{
     position: absolute;
-    left: 0;
-    bottom: 0;
+    top: 44px;
+    left: -177.682728%;
+    display: none;
+    z-index: 2040;
 }
-
-
-/*===============表格样式========================*/
-.nav_text{
-    text-align: right;
+.alert p{
+    padding: 5px 30px;
 }
-
-.radio-inline{
-    margin-bottom: 7px;
+.alert .modal-sm{
+    width: 445px;
 }
-.search_margin_botton{
-    margin-bottom: 20px;
-    margin-left: 0;
-    margin-right: 0;
-}
-th:last-child{
-    text-align: center;
-}
-tr td:last-child{
-    text-align: center;
-}
-#exampleInputName2{
-    font-size: 12px;
-}
-
-/*datatime*/
-.form-inline-wrap .form-inline .datatime_input_width{
-    width: 40%;
-}
-.form-inline-wrap .form-inline .datatime_input_width1{
-    width: 54%;
-}
-/*================分页=============*/
-
-.form-inline .check_roles{
-    font-size: 12px;
-    vertical-align: sub;
-    margin-right: 3px;
-
-}
-/*============修改密码 退出登录===========*/
-.modal_content_padding{
-    padding: 47px 70px;
-}
-.modal_content_padding a:first-child{
-    margin-right: 9px;
-}
-/*=============操作系统样式===================*/
-#select_style{
-    width: 60%;
-    float: right;
-    margin-right: 5%;
-    height: 20px;
-    line-height: 20px;
-    font-size: 12px;
-}
-#select_next_style{
-    width: 100%;
-    height: 20px;
-    line-height: 20px;
-    padding: 0;
-    margin: 0;
-    font-size: 12px;
-    float: left;
-}
-#select_next_style2{
-    width: 60%;
-    height: 20px;
-    line-height: 20px;
-    padding: 0;
-    margin: 0;
-    font-size: 12px;
-}
-#select_style2{
-    float: left;
-}
-#exampleInputName2_only{
-    width: 50%;
-}
-
-
-
-.liucheng_jiantou img{
-    height: 15px;
-    width: 100%;
-}
-/*========商品查看==============*/
-.font_color_h5{
-    color: #3DA5B0;
-}
-.margin_bottom{
-    margin-bottom: 10px;
-}
-.button_background1{
-    background: #337AB7;
-}
-.button_white{
-    color: #fff;
-}
-.text_align_right{
-    text-align: right;
-}
-.overflow{
-    overflow: hidden;
-}
-.border_bottom{
-    border-bottom: 1px solid #eee;
-    margin-bottom: 7px;
-}
-.padding_left{
-    padding-left: 0;
-}
-.font_size12{
-    font-size: 12px;
-}
-..overflow-x{
-    overflow-x: auto;
-}
-
-
-.checkbox_style{
-    font-size: 12px;
+.alert p .courier_input{
     display: inline-block;
-    margin-left: 7px;
+    padding: 3px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
-.margin_top20{
-    margin-top: 20px;
+.alert p .courier_input input{
+    border: none;
+    outline-style: none;
 }
-.red_color{
+.alert button{
+    margin-left: 30px;
+    margin-bottom:15px;
+}
+.alert p:first-child{
+    margin-top: 30px;
+}
+.alert p u{
     color: red;
+    font-weight: bold;
+}
+
+.modal-backdrop{
+    display: none;
+}
+.courier_print{
+    width: 652px;
+    position: absolute;
+    top: 0;
+    left: -207.682728%;
+}
+.courier_relative{
+    position: relative;
+}
+.courier_wrap span{
+    position: absolute;
+}
+.courier_wrap .courier_name1{
+    top: 76px;
+    left: 107px;
+}
+.courier_wrap .courier_name2{
+    top: 79px;
+    left: 375px;
+}
+.courier_wrap .courier_name3{
+    top: 280px;
+    left: 107px;
+}
+.courier_wrap .courier_address1{
+    top: 130px;
+    left: 107px;
+}
+.courier_wrap .courier_address2{
+    top: 130px;
+    left: 375px;
+}
+.courier_wrap .courier_tel1{
+    top: 183px;
+    left: 120px;
+}
+.courier_wrap .courier_tel2{
+    top: 183px;
+    left: 388px;
+}
+.jianlist_wrap{
+    display: none;
+}
+.courier_wrap_print{
+    display: none;
 }
