--- a/server/views/index.html
+++ b/server/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
     <title>仓库首页</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{static_host}}/bootstrap.min.css">
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/public.css">
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div id="content" class="container-fluid"></div>
-    <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{{static_host}}/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="{{static_host}}/bootstrap.min.js"></script>
     <script src="js/app/index.js"></script>
-    <script src="js/lodash.min.js" type="text/javascript"></script>
-    <script src="js/print.js"></script>
+    <script src="{{static_host}}/lodash.min.js" type="text/javascript"></script>
+    <script src="{{static_host}}/print.js"></script>
 </body>
 </html>
