--- a/server/views/index.html
+++ b/server/views/index.html
@@ -12,6 +12,8 @@
 
 </head>
 <body>
+    <script type="text/javascript">
+    </script>
     <div id="content" class="container-fluid"></div>
     <script src="{{static_host}}/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="{{static_host}}/bootstrap.min.js"></script>
