--- a/server/views/login.html
+++ b/server/views/login.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>佑佑收银平台</title>
-	<script src="http://libs.baidu.com/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
+    <title>仓库后台登录</title>
+	<script src="js/jquery-3.1.1.min.min.js" type="text/javascript"></script>
     <style media="screen">
         *{
         padding: 0;
