--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script type="text/javascript">
+        var height_num;
     </script>
     <div id="content" class="container-fluid"></div>
     <script src="{{static_host}}/jquery-3.1.1.min.js" type="text/javascript"></script>
