--- a/public/css/public.css
+++ b/public/css/public.css
@@ -135,3 +135,14 @@ th:last-child{
 .vertical_align_top{
     vertical-align: top;
 }
+.settings_warp{
+    display: inline-block;
+    display: none;
+}
+.setting_open{
+    display: inline-block;
+
+}
+.setting_open img{
+    height: 54.4px;
+}
