--- a/server/views/logistics_orders.html
+++ b/server/views/logistics_orders.html
@@ -13,6 +13,7 @@
 <body>
     <script type="text/javascript">
     var orders_map={};
+    var order_id;
     </script>
     <div id="content" class="container-fluid"></div>
 
