--- a/public/css/public.css
+++ b/public/css/public.css
@@ -13,6 +13,9 @@
   font-size: 12px;
   display: inline-block;margin-left: 7px;
 }
+#table_height{
+  min-height: 553px;
+}
 
 .news{
     width: 100%;
@@ -40,7 +43,7 @@
 /*弹出层*/
 .alert{
     position: absolute;
-    top: 44px;
+    top: 0;
     left: -177.682728%;
     display: none;
     z-index: 2040;
